solved overflow

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -25,7 +25,7 @@ body{
 }
 
 .navList{
-    margin-right: 40px;
+    margin-right: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -88,6 +88,7 @@ body{
     right: 40px;
     z-index: 20;
     display: none;
+    
 }
 /* -----media qu------ */
 @media (max-width:1650px){
