--- a/src/Components/hero/Hero.css
+++ b/src/Components/hero/Hero.css
@@ -1,7 +1,7 @@
 .hero{
     background-image: linear-gradient(rgba(36, 40, 44, 0.819),rgba(13, 14, 14, 0.681)),url(../Assets/hero.png);
     height: 100vh;
-    max-width: 100vw;
+    width: 100vw;
     overflow-x: hidden;
     background-size: cover;
     background-position: center;
